--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="recipe-container">
         <div id="title-wrapper">
             <div>
-                <a id="back-link" href="/">
+                <a id="back-link" href="./">
                     <svg xmlns="http://www.w3.org/2000/svg" id="back-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
                     </svg>
