--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beer Recipes</title>
     <link rel="stylesheet" href="css/site.css">
-    <script src="lib/markdown-it.min.js"></script>
+    <script src="lib/markdown-it-14.0.0.min.js"></script>
     <script src ="js/site.js"></script>
 </head>
 <body>
